# hermes-openapi-auditor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  hermes-openapi-auditor-plan.md  plugin.yaml  pyproject.toml  schemas.py  tools.py
auditor/: __init__.py  detect.py  loader.py  model.py  profiles.py  rendering.py  runner.py  walker.py
auditor/rules/: __init__.py  _dispatch.py  additional_properties.py  ambiguous_types.py  missing_descriptions.py  missing_examples.py  undocumented_errors.py
auditor/walker/: __init__.py  _operations.py  _pointer.py  _schemas.py
tests/: conftest.py  test_detect.py  test_handler.py  test_integration.py  test_loader.py  test_rules_additional_properties.py  test_rules_ambiguous_types.py  test_rules_missing_descriptions.py  test_rules_missing_examples.py  test_rules_undocumented_errors.py  test_walker.py
tests/fixtures/: invalid-frankenstein.yaml  invalid-no-version.json  petstore-2.0.yaml  petstore-3.0.yaml  petstore-3.1.yaml
tests/fixtures/synthetic/: additional-properties-3.0.yaml  additional-properties-3.1.yaml  ambiguous-types-2.0.yaml  ambiguous-types-3.0.yaml  ambiguous-types-3.1.yaml  clean-2.0.yaml  clean-3.0.yaml  missing-descriptions-3.0.yaml  missing-examples-2.0.yaml  missing-examples-3.0.yaml  missing-examples-3.1.yaml  undocumented-errors-3.0.yaml
